tests/tooling/fixtures/native/recovery/positive/assignment_bool_branch.objc3
module AssignmentBoolBranch;

fn main() -> i32 {
  let flag = false;
  flag = true;
  if (flag) {
    return 1;
  }
  return 0;
}

