tests/tooling/fixtures/native/recovery/negative/negative_sel_return_nullability_suffix.objc3
// Negative fixture: SEL return nullability suffix is unsupported.
// Expected diagnostic code(s): O3S206.
module NegativeSELReturnNullabilitySuffix;

fn pick(flag: bool) -> SEL? {
  if (flag) {
    return 1;
  }
  return 0;
}

fn main() -> i32 {
  if (pick(true) != 0) {
    return 1;
  }
  return 0;
}
